flang/test/Semantics/OpenMP/fuse1.f90
!RUN: %python %S/../test_errors.py %s %flang -fopenmp -fopenmp-version=60

! Make sure we correctly count the number of nests generated by FUSE
! without a LOOPRANGE clause.

subroutine f
  integer :: i

  !$omp do
  !ERROR: This construct requires a sequence of at least 2 loops, but the loop sequence has a length of 1
  !BECAUSE: LOOPRANGE clause was specified with a count of 2 starting at loop 1
  !$omp fuse looprange(1, 2)
  !BECAUSE: LOOPRANGE clause was not specified, the entire loop sequence is assumed
  !$omp fuse
  do i = 1, 10
  end do
  !$omp end fuse
  !$omp end fuse
end

